[package]
name = "bean-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serenity = {version = "0.11", features = ["framework", "standard_framework"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
